# CareerPilot-Agent

./: .gitignore  AGENT.md  CLAUDE.md  README.md  agent.py  pyproject.toml  railway.json  requirements.txt
.github/workflows/: weekly_reminder.yml
actions/: circuit_breaker.py  error_handler.py  executor.py  security.py
api/: server.py
api/routes/: agent.py  dashboard.py  skills.py
config/: config.py  goals.yaml
database/: db_utils.py
frontend/: index.html
memory/: latest_snapshot.json  long_term.py  short_term.py
planner/: reasoner.py
scripts/: careerpilot_daemon.py  send_gmail_api.py  weekly_reminder.py
skills/: registry.py
skills/audit_repo/: SKILL.md  audit_repo.py
skills/dev_card/: SKILL.md  dev_card.py
skills/gap_analyzer/: SKILL.md  gap_analyzer.py
skills/github_observer/: github_observer.py
skills/goals_updater/: SKILL.md  goals_updater.py
skills/interview_prep/: SKILL.md  interview_prep.py
skills/linkedin_writer/: SKILL.md  linkedin_writer.py
skills/nudge_writer/: SKILL.md  nudge_writer.py
skills/project_suggester/: SKILL.md  project_suggester.py
skills/readme_writer/: SKILL.md  readme_writer.py
tests/: test_memory.py  test_observer.py  test_planner.py
